--- a/app/globals.css
+++ b/app/globals.css
@@ -25,6 +25,8 @@
     --input: 214.3 31.8% 91.4%;
     --ring: 221.2 83.2% 53.3%;
     --radius: 0.5rem;
+    --complementary: hsl(41.2,83.2%,53.3%);
+    --light: hsl(221.2,82.7%,78.2%);
   }
 
   .dark {
