--- a/app/globals.css
+++ b/app/globals.css
@@ -1,7 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
- 
+
+textarea:focus,
+input:focus {
+  outline: none;
+}
 
 @layer base {
   :root {
@@ -25,8 +29,8 @@
     --input: 214.3 31.8% 91.4%;
     --ring: 221.2 83.2% 53.3%;
     --radius: 0.5rem;
-    --analogous: hsl(41.2,83.2%,53.3%);
-    --light: hsl(221.2,82.7%,78.2%);
+    --analogous: hsl(41.2, 83.2%, 53.3%);
+    --light: hsl(221.2, 82.7%, 78.2%);
   }
 
   .dark {
@@ -52,7 +56,6 @@
   }
 }
 
- 
 @layer base {
   * {
     @apply border-border;
