--- a/app/globals.css
+++ b/app/globals.css
@@ -7,6 +7,12 @@ input:focus {
   outline: none;
 }
 
+.cta-section-bg {
+  background-image: url("/blurry-gradient-haikei.svg");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
 .hero-image {
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/images/hero-garage.jpeg");
   height: 50%;
