--- a/app/globals.css
+++ b/app/globals.css
@@ -8,7 +8,7 @@ input:focus {
 }
 
 .reviews-cta-section-bg {
-  background-image: url("/blurry-gradient-haikei.svg");
+  background-image: url("/blurry-gradient-haikei1.svg");
   background-repeat: no-repeat;
   background-size: cover;
 }
