--- a/app/globals.css
+++ b/app/globals.css
@@ -20,7 +20,8 @@ input:focus {
 }
 
 .hero-image {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/images/hero-garage.jpeg");
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url("/images/hero-garage.jpeg");
   height: 50%;
   background-position: center;
   background-repeat: no-repeat;
